removal of unnecessary ones

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,6 @@ target_compile_features(wordchecker_compiler_flags INTERFACE cxx_std_23)
 
 configure_file(WordCheckerConfig.h.in WordCheckerConfig.h)
 
-add_subdirectory(MathFunctions)
-
 find_package(wxWidgets REQUIRED COMPONENTS net core base richtext)
 if(wxWidgets_USE_FILE) # not defined in CONFIG mode
     include(${wxWidgets_USE_FILE})
@@ -20,6 +18,6 @@ endif()
 
 add_executable(WordChecker main.cpp)
 
-target_link_libraries(WordChecker PUBLIC MathFunctions wordchecker_compiler_flags ${wxWidgets_LIBRARIES})
+target_link_libraries(WordChecker PUBLIC wordchecker_compiler_flags ${wxWidgets_LIBRARIES})
 
 target_include_directories(WordChecker PUBLIC "${PROJECT_BINARY_DIR}")
